# Narcisse

./: .gitignore  .gitmodules  CMakeLists.txt
app/: compiler.cc  viewer.cc
include/narcisse/: shader.hh
include/pogl/: camera.hh  camera.hxx  context.hh  context.hxx  cube-map.hh  engine.hh  engine.hxx  flatten.hh  flatten.hxx  mesh.hh  object.hh  object.hxx  pogl.hh  program.hh  program.hxx  reflecting.hh  reflecting.hxx  render-buffer.hh  render-target.hh  scene-reader.hh  scene-reader.hxx  scene.hh  scene.hxx  shader.hh  shader.hxx  texture.hh  uniform-handle.hh  uniform-handle.hxx  vbo.hh  vbo.hxx  vertex-attrib-pointer.hh  vertex-attrib-pointer.hxx
include/pogl/detail/: flatten.hh  flatten.hxx  gl-types.hh  meta.hh  scene-reader.hh  scene-reader.hxx  shader-source.hh  shader-source.hxx
include/pogl/legacy/: image.hh  image_io.hh
lib/: CMakeLists.txt
scenes/: .gdb_history  board.tga  companion.tga  crate.tga  floor.glsl  fragment.glsl  narcisse.json  reflection_frag.glsl  reflection_vert.glsl  refraction_frag.glsl  scene.json  vertex.glsl  wood.tga
shaders/: fragment.glsl  vertex.glsl
slides/: Makefile  header.tex  slides.md
src/pogl/: camera.cc  context.cc  cube-map.cc  engine.cc  mesh.cc  object.cc  program.cc  reflecting.cc  render-buffer.cc  render-target.cc  scene.cc  texture.cc  uniform-handle.cc  vertex-attrib-pointer.cc
src/pogl/detail/: shader-source.cc
src/pogl/legacy/: image.cpp  image_io.cpp
